Modified file paths for relative path, not colab

--- a/Funding_Applicant_Success_Predictor.ipynb
+++ b/Funding_Applicant_Success_Predictor.ipynb
@@ -1,30 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8YwDXRvFs1gL",
-        "outputId": "b79e0fc7-4e07-4415-b85f-0ac1be02cb26"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "W0Jg0L-Wsza0"
@@ -46,7 +22,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
@@ -251,8 +226,9 @@
               "[5 rows x 12 columns]"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -263,7 +239,7 @@
         "import tensorflow as tf\n",
         "\n",
         "#  Import and read the charity_data.csv.\n",
-        "application_df = pd.read_csv(\"/content/drive/MyDrive/deep-learning-challenge/Resources/charity_data.csv\")\n",
+        "application_df = pd.read_csv(\"Resources/charity_data.csv\")\n",
         "application_df.head()"
       ]
     },
@@ -280,7 +256,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
@@ -473,8 +448,9 @@
               "[5 rows x 10 columns]"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -495,7 +471,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "APPLICATION_TYPE            17\n",
@@ -511,8 +486,9 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -532,7 +508,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "APPLICATION_TYPE\n",
@@ -556,8 +531,9 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 10
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -577,7 +553,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "T3       27037\n",
@@ -592,8 +567,9 @@
               "Name: APPLICATION_TYPE, dtype: int64"
             ]
           },
+          "execution_count": 29,
           "metadata": {},
-          "execution_count": 29
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -621,7 +597,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "C1000    17326\n",
@@ -638,8 +613,9 @@
               "Name: CLASSIFICATION, Length: 71, dtype: int64"
             ]
           },
+          "execution_count": 30,
           "metadata": {},
-          "execution_count": 30
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -659,7 +635,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "C1000    17326\n",
@@ -710,8 +685,9 @@
               "Name: CLASSIFICATION, dtype: int64"
             ]
           },
+          "execution_count": 32,
           "metadata": {},
-          "execution_count": 32
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -731,7 +707,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "C1000    17326\n",
@@ -743,8 +718,9 @@
               "Name: CLASSIFICATION, dtype: int64"
             ]
           },
+          "execution_count": 34,
           "metadata": {},
-          "execution_count": 34
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -796,7 +772,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
@@ -1482,8 +1457,9 @@
               "[34299 rows x 44 columns]"
             ]
           },
+          "execution_count": 35,
           "metadata": {},
-          "execution_count": 35
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1532,9 +1508,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "(X_train).shape"
-      ],
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1542,18 +1516,20 @@
         "id": "_d5wqKSHVpQC",
         "outputId": "95f5fb38-e9be-4d3a-a2d1-894ee6508083"
       },
-      "execution_count": 48,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(25724, 43)"
             ]
           },
+          "execution_count": 48,
           "metadata": {},
-          "execution_count": 48
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "(X_train).shape"
       ]
     },
     {
@@ -1577,8 +1553,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"sequential_2\"\n",
             "_________________________________________________________________\n",
@@ -1644,8 +1620,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/100\n",
             "804/804 [==============================] - 2s 2ms/step - loss: 0.5690 - accuracy: 0.7227\n",
@@ -1867,8 +1843,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "268/268 - 0s - loss: 0.5717 - accuracy: 0.7261 - 437ms/epoch - 2ms/step\n",
             "Loss: 0.5716578364372253, Accuracy: 0.726064145565033\n"
@@ -1890,22 +1866,25 @@
       "outputs": [],
       "source": [
         "# Export our model to HDF5 file\n",
-        "nn.save('/content/drive/MyDrive/deep-learning-challenge/AlphabetSoupCharity.h5')"
+        "nn.save('AlphabetSoupCharity.h5')"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Y-EeUZNYbe2g"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Funding_Applicant_Success_Predictor.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -1922,11 +1901,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.6"
-    },
-    "colab": {
-      "name": "Funding_Applicant_Success_Predictor.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
     }
   },
   "nbformat": 4,
