Cleaned up notebook headers

--- a/AlphabetSoupCharity_Optimzation.ipynb
+++ b/AlphabetSoupCharity_Optimzation.ipynb
@@ -2163,7 +2163,7 @@
         "id": "-7z6eBDvBm6i"
       },
       "source": [
-        "## V88889435439857"
+        "## V7"
       ]
     },
     {
@@ -2412,7 +2412,7 @@
         "id": "jeUvDhEnCdRY"
       },
       "source": [
-        "## V10"
+        "## V8"
       ]
     },
     {
@@ -2634,6 +2634,13 @@
         "# Evaluate the model using the test data\n",
         "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
         "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Export Model"
       ]
     },
     {
