--- a/AlphabetSoupCharity_Optimzation.ipynb
+++ b/AlphabetSoupCharity_Optimzation.ipynb
@@ -2403,237 +2403,7 @@
         "id": "XivSiIFhFLp0"
       },
       "source": [
-        "This one is the best - I don't even know why"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "jeUvDhEnCdRY"
-      },
-      "source": [
-        "## V8"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 72,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "t_D3nHUeChst",
-        "outputId": "d671c532-1e87-4022-fdd7-2e856c6d4745"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Model: \"sequential_8\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " dense_43 (Dense)            (None, 500)               20500     \n",
-            "                                                                 \n",
-            " dense_44 (Dense)            (None, 300)               150300    \n",
-            "                                                                 \n",
-            " dense_45 (Dense)            (None, 200)               60200     \n",
-            "                                                                 \n",
-            " dense_46 (Dense)            (None, 100)               20100     \n",
-            "                                                                 \n",
-            " dense_47 (Dense)            (None, 1)                 101       \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 251,201\n",
-            "Trainable params: 251,201\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-        "\n",
-        "# Initialize model\n",
-        "nn = tf.keras.models.Sequential()\n",
-        "nn.add(tf.keras.layers.Dense(units=500, activation=\"relu\", input_dim=40))\n",
-        "\n",
-        "# First hidden layer\n",
-        "nn.add(tf.keras.layers.Dense(units=300, activation=\"relu\"))\n",
-        "\n",
-        "# Second hidden layer\n",
-        "nn.add(tf.keras.layers.Dense(units=200, activation=\"relu\"))\n",
-        "\n",
-        "# Third hidden layer\n",
-        "nn.add(tf.keras.layers.Dense(units=100, activation=\"relu\"))\n",
-        "\n",
-        "# Output layer\n",
-        "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
-        "\n",
-        "# Check the structure of the model\n",
-        "nn.summary()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 73,
-      "metadata": {
-        "id": "iMApeslyCtGO"
-      },
-      "outputs": [],
-      "source": [
-        "# Compile the model\n",
-        "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 74,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C0BEUvx7Cvuv",
-        "outputId": "f93d7291-e261-441e-eea9-4c45bd11ba68"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/50\n",
-            "804/804 [==============================] - 4s 4ms/step - loss: 0.5687 - accuracy: 0.7237\n",
-            "Epoch 2/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5552 - accuracy: 0.7302\n",
-            "Epoch 3/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5520 - accuracy: 0.7325\n",
-            "Epoch 4/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5511 - accuracy: 0.7334\n",
-            "Epoch 5/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5485 - accuracy: 0.7327\n",
-            "Epoch 6/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5476 - accuracy: 0.7333\n",
-            "Epoch 7/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5461 - accuracy: 0.7355\n",
-            "Epoch 8/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5454 - accuracy: 0.7358\n",
-            "Epoch 9/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5451 - accuracy: 0.7365\n",
-            "Epoch 10/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5439 - accuracy: 0.7365\n",
-            "Epoch 11/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5436 - accuracy: 0.7365\n",
-            "Epoch 12/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5431 - accuracy: 0.7363\n",
-            "Epoch 13/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5431 - accuracy: 0.7357\n",
-            "Epoch 14/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5417 - accuracy: 0.7378\n",
-            "Epoch 15/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5424 - accuracy: 0.7370\n",
-            "Epoch 16/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5413 - accuracy: 0.7364\n",
-            "Epoch 17/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5411 - accuracy: 0.7372\n",
-            "Epoch 18/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5402 - accuracy: 0.7383\n",
-            "Epoch 19/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5407 - accuracy: 0.7381\n",
-            "Epoch 20/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5395 - accuracy: 0.7391\n",
-            "Epoch 21/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5397 - accuracy: 0.7386\n",
-            "Epoch 22/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5389 - accuracy: 0.7388\n",
-            "Epoch 23/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5394 - accuracy: 0.7389\n",
-            "Epoch 24/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5394 - accuracy: 0.7390\n",
-            "Epoch 25/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5387 - accuracy: 0.7373\n",
-            "Epoch 26/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5378 - accuracy: 0.7390\n",
-            "Epoch 27/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5381 - accuracy: 0.7386\n",
-            "Epoch 28/50\n",
-            "804/804 [==============================] - 4s 5ms/step - loss: 0.5373 - accuracy: 0.7394\n",
-            "Epoch 29/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5374 - accuracy: 0.7395\n",
-            "Epoch 30/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5376 - accuracy: 0.7398\n",
-            "Epoch 31/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5373 - accuracy: 0.7392\n",
-            "Epoch 32/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5369 - accuracy: 0.7397\n",
-            "Epoch 33/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5358 - accuracy: 0.7402\n",
-            "Epoch 34/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5365 - accuracy: 0.7402\n",
-            "Epoch 35/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5377 - accuracy: 0.7391\n",
-            "Epoch 36/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5359 - accuracy: 0.7397\n",
-            "Epoch 37/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5353 - accuracy: 0.7402\n",
-            "Epoch 38/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5351 - accuracy: 0.7403\n",
-            "Epoch 39/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5353 - accuracy: 0.7404\n",
-            "Epoch 40/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5353 - accuracy: 0.7399\n",
-            "Epoch 41/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5355 - accuracy: 0.7400\n",
-            "Epoch 42/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5354 - accuracy: 0.7398\n",
-            "Epoch 43/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5354 - accuracy: 0.7400\n",
-            "Epoch 44/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5344 - accuracy: 0.7404\n",
-            "Epoch 45/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5349 - accuracy: 0.7406\n",
-            "Epoch 46/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5342 - accuracy: 0.7396\n",
-            "Epoch 47/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5343 - accuracy: 0.7398\n",
-            "Epoch 48/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5350 - accuracy: 0.7408\n",
-            "Epoch 49/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5340 - accuracy: 0.7408\n",
-            "Epoch 50/50\n",
-            "804/804 [==============================] - 3s 4ms/step - loss: 0.5348 - accuracy: 0.7402\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Train the model\n",
-        "fit_model = nn.fit(X_train_scaled, y_train, epochs=50)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 71,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9SbDiRg0CqIc",
-        "outputId": "716f3a8e-c095-4c88-88eb-b3492c20f08e"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "268/268 - 0s - loss: 0.5751 - accuracy: 0.7256 - 420ms/epoch - 2ms/step\n",
-            "Loss: 0.5750587582588196, Accuracy: 0.7255748510360718\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Evaluate the model using the test data\n",
-        "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
-        "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+        "This one is the best - Will save to HDF5"
       ]
     },
     {
@@ -2673,7 +2443,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Explain the purpose of this analysis"
+        "The purpose of this analysis is to present an overview of the results of the foundation funding application binary classifier built for Alphabet Soup."
       ]
     },
     {
@@ -2688,10 +2458,21 @@
       "metadata": {},
       "source": [
         "### Data Preprocessing\n",
-        "- Target Variables\n",
-        "- Features for the model\n",
+        "- Target Variables: A successful or unsuccessful funded project\n",
+        "- Features for the model:\n",
+        "    - APPLICATION TYPE\n",
+        "    - AFFILIATION\n",
+        "    - CLASSIFICATION OF APPLICANT\n",
+        "    - USE CASE FOR FUNDS\n",
+        "    - ORGANIZATION\n",
+        "    - INCOME AMT\n",
+        "    - ASK_AMT \n",
+        "    \n",
         "- Variables that are neither targets nor features and should be removed\n",
-        "    - include distribution of scores removed. \n",
+        "    - EIN, \n",
+        "    - NAME, \n",
+        "    - STATUS,\n",
+        "    - SPECIAL_CONSIDERATIONS.\n",
         "\n",
         "### Compiling, Training, and Evaluating the Model\n",
         "- How many neurons, layers and activation functions did you select for model, and why\n",
@@ -2717,6 +2498,13 @@
         "Summary of overall results of model\n",
         "\n",
         "Recommendation for how a different model could solve this (try something else?) and explain recommendation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Binned the loan ask into 3 bins"
       ]
     }
   ],
