--- a/AlphabetSoupCharity_Optimzation.ipynb
+++ b/AlphabetSoupCharity_Optimzation.ipynb
@@ -2467,7 +2467,7 @@
         "    - ORGANIZATION\n",
         "    - INCOME AMT\n",
         "    - ASK_AMT \n",
-        "    \n",
+        "\n",
         "- Variables that are neither targets nor features and should be removed\n",
         "    - EIN, \n",
         "    - NAME, \n",
@@ -2476,12 +2476,16 @@
         "\n",
         "### Compiling, Training, and Evaluating the Model\n",
         "- How many neurons, layers and activation functions did you select for model, and why\n",
-        "    - include picture of model and layers\n",
-        "- I was unable to achieve the target model performance of 75%, achieving instead a max test score of 72% accuracy\n",
+        "    - Input layer had 200 neurons, with the relu activation as it's the best activation function to initialize a network with\n",
+        "    - the output layer had 1 neuron and a sigmoid activation as it's the best to end on for a binary classifier.\n",
+        "    - There were 5 hidden layers with 200, 100, 100, 80, and 50 neurons (in that order), and with activation functions tanh, gelu, gelu, relu, and relu.\n",
+        "        for these I continued to add layers and neurons in the hope that a more layers and neurons would help to handle the level of complexity of the problem and so that my total layers (7) would match the total number of features.\n",
+        "\n",
+        "- I was unable to achieve the target model performance of 75%, achieving instead a max test score of 72.4% accuracy - however this was NOT from lack of trying.\n",
         "- In order to try and increase model performance I did a number of things:\n",
-        "    - First I,\n",
-        "    - then I,\n",
-        "    - And tried...."
+        "    - First I, removed some of the features that were very unbalanced by dropping the rows with the lowest occurences and removing the column entierly.\n",
+        "    - then I, added more layers and varied activation functions\n",
+        "    - And I also tried adding more neurons per layer."
       ]
     },
     {
@@ -2495,16 +2499,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Summary of overall results of model\n",
+        "Overall the model performed at 72.4% testing accuracy. Should I continue to try and optimize classification accuracy I would consider trying some Ensemble algorithms like Random Forest or Extra Trees and see if accuracy would improve. I would also try and create a more balanced dataset by duplicating rows at random in the under represented category to provide less bias. \n",
         "\n",
-        "Recommendation for how a different model could solve this (try something else?) and explain recommendation"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Binned the loan ask into 3 bins"
+        "Next, I would re-bin the ask amount into 3 bins and remove some of the outliers as that would be contributing to lowered model prediction performance."
       ]
     }
   ],
